# pvr.hdhomerun

./: CMakeLists.txt  appveyor.yml
depends/common/hdhomerun/: CMakeLists.txt  hdhomerun.txt
depends/common/jsoncpp/: CMakeLists.txt
pvr.hdhomerun/: addon.xml.in  changelog.txt
pvr.hdhomerun/resources/: settings.xml
pvr.hdhomerun/resources/language/resource.language.da_dk/: strings.po
pvr.hdhomerun/resources/language/resource.language.en_gb/: strings.po
pvr.hdhomerun/resources/language/resource.language.en_us/: copy-strings.sh  strings.po
pvr.hdhomerun/resources/language/resource.language.et_ee/: strings.po
pvr.hdhomerun/resources/language/resource.language.fr_fr/: strings.po
pvr.hdhomerun/resources/language/resource.language.nl_nl/: strings.po
pvr.hdhomerun/resources/language/resource.language.pl_pl/: strings.po
src/: Addon.cpp  Addon.h  Device.cpp  Device.h  Entry.cpp  Entry.h  Guide.cpp  Guide.h  HDHomeRunTuners.cpp  HDHomeRunTuners.h  Info.cpp  Info.h  IntervalSet.cpp  IntervalSet.h  Lineup.cpp  Lineup.h  Lockable.h  PVR_HDHR.cpp  PVR_HDHR.h  Recording.cpp  Recording.h  Settings.cpp  Settings.h  Tuner.cpp  Tuner.h  UniqueID.h  Utils.cpp  Utils.h  client.cpp  client.h
